2020-05-06  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/sendmsg-window.c (add_attachment): Insert separators
	  between logically distinct sections of the popup menu.

2020-04-11  Pawel Salek  <pawsa0@gmail.com>

	* NEWS, configure.ac, meson.build: release balsa-2.6.0

2020-03-09  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Drop LibBalsaMailbox:is_directory

	It was a write-only flag.

	* libbalsa/mailbox.c (libbalsa_mailbox_init),
	(libbalsa_mailbox_set_msg_tree_changed):
	* libbalsa/mailbox.h:
	* libbalsa/mailbox_maildir.c (libbalsa_mailbox_maildir_new):
	* libbalsa/mailbox_mbox.c (libbalsa_mailbox_mbox_new):
	* libbalsa/mailbox_mh.c (libbalsa_mailbox_mh_new):

2020-03-09  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Remove libbalsa_mailbox_local_load_messages from the API, and
	replace it with LibBalsaMailbox::check virtual method.

	* libbalsa/mailbox_local.c (libbalsa_mailbox_local_class_init),
	(lbml_load_messages_idle_cb), (libbalsa_mailbox_local_check),
	(libbalsa_mailbox_local_set_threading):
	* libbalsa/mailbox_local.h:
	* libbalsa/mailbox_maildir.c (libbalsa_mailbox_maildir_check):
	* libbalsa/mailbox_mbox.c (libbalsa_mailbox_mbox_check):
	* libbalsa/mailbox_mh.c (libbalsa_mailbox_mh_check):

2020-03-06  Peter Bloomfield  <pbloomfield@bellsouth.net>

	mailbox: Make cache-message a class method

	* libbalsa/mailbox.c (libbalsa_mailbox_class_init),
	(lbm_cache_message), (libbalsa_mailbox_get_message),
	(libbalsa_mailbox_real_cache_message),
	(libbalsa_mailbox_cache_message):
	* libbalsa/mailbox.h:
	* libbalsa/mailbox_local.c (libbalsa_mailbox_local_class_init),
	(lbm_local_cache_message), (libbalsa_mailbox_local_cache_message):
	* libbalsa/mailbox_local.h:
	* libbalsa/mailbox_mbox.c (parse_mailbox):

2020-03-06  Peter Bloomfield  <pbloomfield@bellsouth.net>

	mailbox: Guard against out-of-bounds access to a GPtrArray

	* libbalsa/mailbox.c (mailbox_compare_func),
	(libbalsa_mailbox_msgno_get_status),
	(libbalsa_mailbox_msgno_get_subject),